log
Thu Apr  7 11:33:16 HSP 2022: 
 tests:  0|6
total_score: 0/70
ec4fc2d
Thu Apr  7 11:35:54 HSP 2022: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:56:19: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     array->buckets=(Pair*) malloc (capacity*sizeof(Pair));
                   ^
cc1.exe: all warnings being treated as errors
Compilation failed
87e795a
Thu Apr  7 11:37:01 HSP 2022: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:56:19: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     array->buckets=(Pair*) malloc (capacity*sizeof(Pair));
                   ^
cc1.exe: all warnings being treated as errors
Compilation failed
486d55a
